# mobile-health-monitoring-robot-

./: .gitignore  README.md  frames_2026-02-13_23.16.22.gv  frames_2026-02-14_21.26.46.gv
install/: local_setup.sh  setup.sh
install/health_bot_description/share/ament_index/resource_index/package_run_dependencies/: health_bot_description
install/health_bot_description/share/ament_index/resource_index/parent_prefix_path/: health_bot_description
install/health_bot_description/share/health_bot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/health_bot_description/share/health_bot_description/cmake/: health_bot_descriptionConfig-version.cmake  health_bot_descriptionConfig.cmake
install/health_bot_description/share/health_bot_description/environment/: ament_prefix_path.dsv  path.dsv
install/health_bot_description/share/health_bot_description/launch/: launch_sim.launch.py  rsp.launch.py
install/health_bot_description/share/health_bot_description/urdf/: inertials.xacro  robot.urdf.xacro  test.urdf
install/health_bot_description/share/health_bot_description/worlds/: health_hospital.world
log/: latest_build
src/health_bot_description/: CMakeLists.txt  package.xml
src/health_bot_description/config/: bridge_params.yaml  healthbot_controllers.yaml  mapper_params_online_async.yaml  nav2_params.yaml
src/health_bot_description/launch/: display.launch.py  launch_sim.launch.py  rsp.launch.py  slam.launch.py
src/health_bot_description/rviz/: default_view.rviz
src/health_bot_description/urdf/: healthbot.urdf.xacro  healthbot_gazebo.xacro  healthbot_ros2_control.xacro  inertials.xacro  robot.gazebo  robot.urdf.xacro
src/health_bot_description/worlds/: health_hospital.world  hospital.world  hospital_three_floors.world  hospital_two_floors.world
src/health_hospital_world/: CMakeLists.txt  download_models.sh  package.xml
src/health_hospital_world/launch/: hospital.launch.py  view_hospital.launch.py
src/health_hospital_world/models/aws_robomaker_residential_PortraitB_02/meshes/: aws_PortraitB_01_visual.DAE
src/health_hospital_world/worlds/: hospital.world  hospital_three_floors.world  hospital_two_floors.world
src/healthbot_ros2_control/: CMakeLists.txt  package.xml
src/healthbot_ros2_control/config/: healthbot_controllers.yaml
src/healthbot_ros2_control/launch/: healthbot_control.launch.py
src/healthrobot_bringup/: CMakeLists.txt  package.xml
src/healthrobot_bringup/launch/: simulated_robot.launch.py
src/healthrobot_description/: CMakeLists.txt  package.xml
src/healthrobot_description/config/: slam_toolbox.yaml
src/healthrobot_description/launch/: display.launch.py  launch_sim.launch.py
src/healthrobot_description/maps/: hospital_map.pgm  hospital_map.yaml
src/healthrobot_description/rviz/: display.rviz
src/healthrobot_description/urdf/: healthrobot.urdf.xacro  healthrobot_gazebo.xacro  healthrobot_ros2_control.xacro
src/healthrobot_description/worlds/: hospital_two_floors.world
src/healthrobot_localization/: CMakeLists.txt  package.xml
src/healthrobot_localization/config/: amcl.yaml
src/healthrobot_localization/launch/: global_localization.launch.py
src/healthrobot_localization/rviz/: localization.rviz
src/healthrobot_mapping/: CMakeLists.txt  package.xml
src/healthrobot_mapping/config/: slam_toolbox.yaml
src/healthrobot_mapping/launch/: slam.launch.py
src/healthrobot_mapping/maps/: hospital_lifelong_map.data  hospital_map.yaml  hospital_pose_graph.pgm  hospital_pose_graph.yaml  hospital_static_map.yaml
src/healthrobot_mapping/maps/hospital_map/: hospital_static_map.pgm
src/healthrobot_mapping/rviz/: slam.rviz
src/healthrobot_navigation/: CMakeLists.txt  package.xml
src/healthrobot_navigation/behavior_tree/: simple_navigation.xml  simple_navigation_w_replanning.xml  simple_navigation_w_replanning_and_recovery.xml
src/healthrobot_navigation/config/: behavior_server.yaml  behaviour_server.yaml  bt_navigator.yaml  controller_server.yaml  costmap.yaml  planner_server.yaml  smoother_server.yaml
src/healthrobot_navigation/launch/: navigation.launch.py
src/healthrobot_ros2_control/: CMakeLists.txt  package.xml
src/healthrobot_ros2_control/config/: healthrobot_controllers.yaml
src/healthrobot_ros2_control/launch/: healthrobot_control.launch.py
