<?xml version="1.0"?>
<?xml-model href="http://download.ros.org" schematypens="http://www.w3.org"?>
<package format="3">
  <name>health_bot_description</name>
  <version>0.0.1</version>
  <description>IoT Enabled Autonomous Mobile Health Robot for Remote Patient Monitoring</description>
  <maintainer email="wubshet2829@gmail.com">wube</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies needed for the robot to run -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
