<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>healthbot_ros2_control</name>
  <version>0.0.0</version>
  <description>This Package is for controlling the healthbot robot using ROS2 control framework</description>
  <maintainer email="wubshet2829@gmail.com">wube</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
